--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pyrevit by eirannejad</title>
+    <title>pyRevit by eirannejad</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Pyrevit</h1>
+        <h1>pyRevit</h1>
         <p>IronPython UI generator and script library for Autodesk Revit®</p>
 
         <p class="view"><a href="https://github.com/eirannejad/pyRevit">View the Project on GitHub <small>eirannejad/pyRevit</small></a></p>
